# nix-flake-edgetpu

./: README.md  flake.nix  libedgetpu-makefile.diff  libedgetpu-stddef.diff  pyproject.toml
